' MIT License
'
' Permission is hereby granted, free of charge, to any person obtaining a 
' copy of this software and associated documentation files (the "Software"), 
' to deal in the Software without restriction, including without limitation 
' the rights to use, copy, modify, merge, publish, distribute, sublicense, 
' and/or sell copies of the Software, and to permit persons to whom the 
' Software is furnished to do so, subject to the following conditions:
'
' The above copyright notice and this permission notice shall be included in
' all copies or substantial portions of the Software.
'
' THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR 
' IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, 
' FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
' AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER 
' LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING 
' FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
' IN THE SOFTWARE.
'
'  Created by Brian Howard
'  Copyright © 2020 InMotion Software, LLC. All rights reserved.
'
@startuml

!$platform = %getenv("PLATFORM_NAME")
!$export_lang = %getenv("export_lang")

title Login Flow

[*] --> Prompt

Prompt --> Authenticate
Prompt -> ForgotPass
Prompt --> CreateAccount
Prompt --> Prompt
Prompt: String?

state CreateAccount {
    [*] --> EnterInfo
    EnterInfo --> Submit
    Submit --> EnterInfo
    EnterInfo: String?
    Submit: User
    Submit --> [*]: Credentials
}
CreateAccount --> Prompt
CreateAccount --> Authenticate
CreateAccount: String?

Authenticate --> Prompt
Authenticate: Credentials

ForgotPass -> Prompt
ForgotPass: String

note "This is a note $platform $export_lang about login " as N1

note left of Prompt
    This is where the
    login screen goes
end note

Authenticate --> [*]: OAuthToken
@enduml

@startuml
enum LoginViewResult {
    login: Credentials
    register
    forgotPassword: String
}

class User {
    {field} +userId: UUID = UUID.randomUUID()
    +firstName: String
    +lastName: String
    +email: String
    +password: String
}

class OAuthToken {
    + token: String
    + type: String
    + expiration: Date
}

class Credentials {
    + username: String
    + password: String
}
@enduml
